Feat/data normalization (#5)
* feat: write new_schema sql file which contains script that normalize db by adding new dish_ingredient table

* feat: write new_schema_data sql file which contains script that create new dish_ingredient table in db and update dish prices

* refactor: remove dish attribute inside ingredient model

* feat: implement DishIngredient entity

* fix: update Dish entity to have list of DishIngredient

* refactor: fix findDishById considering the new normalized db

* feat: update saveDish method along with depending method according to new normalized db

* refactor: update every other method to follow the normalized db

* refactor: rename ingredient to dishIngredient when necessary

* fix: correct mappers accordingly

* refactor: update sout test in main class to follow the new dataretriever logic after db normalization

* fix: correct initializeDB to insert the data inside dish ingredient table as well

* fix: truncate all the three db ttable in initializeDB method

* fix: remove id_dish column in initialize db method

* feat: implement getIngredients method in dish entity which return the list of ingredient not dishIngredients

* fix: correct find dishes by ingredient name method by removing id_dish column in ingredient which doesnt exist anymore

* feat: add IDs to dishIngredient if they are not set yet

* fix: specify conflict targe  in attachIngredients sql query

* fix: set parameter in detachIngredients method

* fix: make dish ingredient pair unique in dish ingredient table

* fix: correct attach ingredient logic by using executeUpdate instead of batch which doesnt update sequence

* feat: add sout test in main class to verify getGrossMargin() perfomance after db normalization

* refactor: correct ortho errors in comments

* feat: add other ingredient related method to ingredient repository for better structure

* feat: add dish ingredient repository and format data retriever better in consequence